--- a/src/Pages/Login Page/Login.css
+++ b/src/Pages/Login Page/Login.css
@@ -5,7 +5,7 @@
     cursor: pointer;
 }
 .coverL{
-    background-image: url(../../assets/sea.gif);
+    background-image: url(../../assets/backk.gif);
     background-repeat: no-repeat;
     background-size: cover;
 }
