--- a/src/Pages/Login Page/Login.css
+++ b/src/Pages/Login Page/Login.css
@@ -8,4 +8,5 @@
     background-image: url(../../assets/backk.gif);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
